# octogen-py-sdk

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: python-publish.yml
examples/comparison/: server.py
examples/comparison/comparison.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
examples/comparison/showcase/: agent.py
examples/discovery/: pyproject.toml  server.py
examples/discovery/showcase/: agent.py
examples/feed/: server.py
examples/feed/showcase/: agent.py  schema.py
examples/stylist/: pyproject.toml  server.py
examples/stylist/showcase/: agent.py
src/octogen/shop_agent/: checkpointer.py  crud.py  factory.py  schemas.py  server.py
src/octogen_py_sdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
